<resources>
    <string name="app_name">Android Labs</string>
    <string name="firsttext">Enter your email address:</string>
    <string name="secondtext">Type your password:</string>
    <string name="emailhere">Type e-mail here..</string>
    <string name="youremail">Your email:</string>
    <string name="youremailenter">Enter your email</string>
    <string name="profile">Your profile</string>
    <string name="yourname">Your name:</string>
    <string name="yourpicture">Your picture:</string>
    <string name="login">LOGIN</string>
    <string name="entername">Enter your name</string>
    <string name="buttonpicture">Click the button above to take a picture</string>
    <string name="gotochat">Go to chat.</string>
    <string name="send">Send</string>
    <string name="receieve">Recieve</string>
    <string name="typehere">Type here..</string>
    <string name="delete">Do you want to delete?</string>
    <string name="gotoweather">Weather</string>
    <string name="title_activity_weather_forecast">WeatherForecast</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
</resources>