<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   >

    <TextView
        android:id="@+id/firsttext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/firsttext" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/emailhere"
        android:inputType="textEmailAddress"/>

    <TextView
        android:id="@+id/secondtext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/secondtext"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/login"
        android:text="@string/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </Button>
</LinearLayout>

